[doc] Type-matching "switch".